<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="?listPreferredItemHeightLarge"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:minHeight="?listPreferredItemHeightLarge">

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1 PM" />

        <TextView
            android:id="@+id/textView_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/Temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_time" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="87dp"
            android:layout_height="91dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_time"
            app:srcCompat="@drawable/ic_alien" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_temp"
            app:layout_constraintStart_toEndOf="@+id/textView_temp"
            app:layout_constraintTop_toTopOf="@+id/textView_temp"
            tools:text="61" />

        <TextView
            android:id="@+id/textView_precip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Precip"
            app:layout_constraintEnd_toEndOf="@+id/textView_temp"
            app:layout_constraintStart_toStartOf="@+id/textView_temp"
            app:layout_constraintTop_toBottomOf="@+id/textView_temp" />

        <TextView
            android:id="@+id/precipPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_precip"
            app:layout_constraintStart_toEndOf="@+id/textView_precip"
            app:layout_constraintTop_toTopOf="@+id/textView_precip"
            tools:text="76%" />

        <TextView
            android:id="@+id/textView_Wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/windSpeed"
            app:layout_constraintEnd_toEndOf="@+id/textView_precip"
            app:layout_constraintStart_toStartOf="@+id/textView_precip"
            app:layout_constraintTop_toBottomOf="@+id/textView_precip" />

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_Wind"
            app:layout_constraintStart_toEndOf="@+id/textView_Wind"
            app:layout_constraintTop_toTopOf="@+id/textView_Wind"
            tools:text="35" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="°F"
            app:layout_constraintBottom_toBottomOf="@+id/textView_temp"
            app:layout_constraintStart_toEndOf="@+id/temp"
            app:layout_constraintTop_toTopOf="@+id/textView_temp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="mph"
            app:layout_constraintBottom_toBottomOf="@+id/windSpeed"
            app:layout_constraintStart_toEndOf="@+id/windSpeed"
            app:layout_constraintTop_toTopOf="@+id/windSpeed" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>