<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="model"
            type="com.example.weather.data.db.entity.Daily" />
        <variable
            name="holder"
            type="com.example.weather.ui.weather.future.list.FutureListHolder" />
    </data>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="@{clickListener}"
    android:minHeight="?listPreferredItemHeightLarge"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="?listPreferredItemHeightLarge">

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:dateString="@{model.time}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="1.1.2000" />

        <TextView
            android:id="@+id/textView_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:roundToInt="@{ model.temperatureHigh}"
            tools:text="25.0" />

        <TextView
            android:id="@+id/textView_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{model.summary}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_temperature"
            tools:text="Clear" />

        <ImageView
            android:id="@+id/imageView_condition_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.397"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.15"
            app:loadimg="@{model.icon}"
            tools:tint="#f9a920" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/extend_Group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:constraint_referenced_ids="textView_Low,textView_LTemp,textView_MesUnit,textView_precip,textview_PrecipPercent,textView_visibilityRange,textView_WeatherUnit,textView_visibility"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_Low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/low_temp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_condition" />

        <TextView
            android:id="@+id/textView_LTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:roundToInt="@{model.temperatureLow}"
            app:layout_constraintBottom_toBottomOf="@+id/textView_Low"
            app:layout_constraintStart_toEndOf="@+id/textView_Low"
            app:layout_constraintTop_toTopOf="@+id/textView_Low"
            tools:text="35" />

        <TextView
            android:id="@+id/textView_WeatherUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="°F"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="@+id/textView_LTemp"
            app:layout_constraintStart_toEndOf="@+id/textView_LTemp"
            app:layout_constraintTop_toTopOf="@+id/textView_LTemp"
            tools:text="°F" />

        <TextView
            android:id="@+id/textView_precip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/Precip"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="@+id/textView_WeatherUnit"
            app:layout_constraintStart_toEndOf="@+id/textView_WeatherUnit"
            app:layout_constraintTop_toTopOf="@+id/textView_WeatherUnit" />

        <TextView
            android:id="@+id/textview_PrecipPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:toPercent="@{model.precipProbability}"
            app:layout_constraintBottom_toBottomOf="@+id/textView_precip"
            app:layout_constraintStart_toEndOf="@+id/textView_precip"
            app:layout_constraintTop_toTopOf="@+id/textView_precip"
            tools:text="65%" />

        <TextView
            android:id="@+id/textView_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Vis"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Low" />

        <TextView
            android:id="@+id/textView_visibilityRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:visRoundToInt="@{model.visibility}"
            app:layout_constraintBottom_toBottomOf="@+id/textView_visibility"
            app:layout_constraintStart_toEndOf="@+id/textView_visibility"
            app:layout_constraintTop_toTopOf="@+id/textView_visibility"
            tools:text="10" />

        <TextView
            android:id="@+id/textView_MesUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="mi"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="@+id/textView_visibilityRange"
            app:layout_constraintStart_toEndOf="@+id/textView_visibilityRange"
            app:layout_constraintTop_toTopOf="@+id/textView_visibilityRange" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="°F"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintBottom_toBottomOf="@+id/textView_temperature"
            app:layout_constraintStart_toEndOf="@+id/textView_temperature"
            app:layout_constraintTop_toTopOf="@+id/textView_temperature" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
</layout>